--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "aadiyog",
   "version": "1.0.0",
   "description": "define your backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon src/index.js"
   },
   "keywords": [
     "shiva"
   ],
   "author": "shah rahul",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
